--- a/recipe_app/recipes/templates/recipes/detail.html
+++ b/recipe_app/recipes/templates/recipes/detail.html
@@ -60,7 +60,7 @@
                         {% endfor %}
                     </div>
                     <div class="tips-container hide-mobile"><span style="font-weight: 400">Tipps:</span>
-                        <ul style="overflow-wrap: break-word; padding-left: 2rem; list-style-type: disc">
+                        <ul style="overflow-wrap: break-word; padding-left: 2rem; list-style-type: circle">
                             {% for tip in recipe.tips.all %}
                                 <li style="margin-top: 0.5rem;">{{ tip.tip }}</li>
                             {% endfor %}
