--- a/recipe_app/recipes/templates/recipes/index.html
+++ b/recipe_app/recipes/templates/recipes/index.html
@@ -31,7 +31,7 @@
             <div class="widget">
                 <form id="initial-prompt-form" class="searchbar" method="post" action="{% url 'recipes:previews' %}">
                     {% csrf_token %}
-                    <input class="searchbar-input" style="border: 0;" type="text" id="ingredients-input" name="ingredients-input" placeholder="broccoli, pasta, parmesan">
+                    <input class="searchbar-input" style="border: 0;" type="text" id="ingredients-input" name="ingredients-input" placeholder="Gerichtbeschreibung, Zutaten, Vegetarisch, ...">
                     <button type="submit" class="searchbar-button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
                     </button>
