--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -5,7 +5,14 @@
 {% load number_converter %}
 
 
+{% block header-middle %}
+    <span style="font-size: 2rem; font-weight: 500;" class="hide-mobile">Entdecken</span>
+{% endblock header-middle %}
+
+
 {% block main-content %}
+
+
 
 
 <div class="row-wrapper section-row">
