--- a/recipe_app/recipes/templates/recipes/layout.html
+++ b/recipe_app/recipes/templates/recipes/layout.html
@@ -43,6 +43,15 @@
         {% endblock header-middle %}
     </div>
 
+    {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+            <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %}">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+    {% endif %}
 
     <main>
         <!-- Main content -->
