--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -15,7 +15,7 @@
 
 
 
-<div class="row-wrapper section-row">
+<div class="row-wrapper section-row" style="margin-top: 0;">
     <div class="row-content">
         {% for preview in recipes %}
         
