--- a/recipe_app/recipes/templates/recipes/layout.html
+++ b/recipe_app/recipes/templates/recipes/layout.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
 
-    <div style="display: flex; justify-content: center; margin-bottom: 2rem;">
+    <div style="display: flex; justify-content: center;">
         {% block header-middle %}
         {% endblock header-middle %}
     </div>
