--- a/recipe_app/recipes/templates/recipes/index.html
+++ b/recipe_app/recipes/templates/recipes/index.html
@@ -18,7 +18,7 @@
     <div class="row-wrapper">
         <div class="row-content">
             <div class="widget">
-                <div class="initial-prompt-heading typewriter">
+                <div class="initial-prompt-heading typewriter hide-mobile">
                     <p>&thinsp;What you got for me, chef?&thinsp;</p>
                 </div>
             </div>
