--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -6,7 +6,7 @@
 
 
 {% block header-middle %}
-    <span style="font-size: 2rem; font-weight: 500;" class="hide-mobile">Entdecken</span>
+    <span style="font-size: 2rem; font-weight: 500; margin-bottom: 2rem;" class="hide-mobile">Entdecken</span>
 {% endblock header-middle %}
 
 
@@ -48,10 +48,14 @@
                         </div>
                         <div class="title">{{ preview.title }}</div>
                         <div class="description">{{ preview.description }}</div>
-                        <div class="diets-preview-container">
-                            {% for item in preview.diets.all %}
-                                <div class="diets-hashtag">{{ item }}</div>
-                            {% endfor %}
+                        <div class="list-preview-card-author-and-rating-container">
+                            <div class="author">{{ preview.author}}</div>
+                            {% if preview.avg_rating %}
+                                <div class="stars">
+                                    {{ preview.avg_rating }}
+                                    <div class="star-filled">★</div>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
