add user interaction panel (add) in recipe detail

--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -52,8 +52,9 @@
                             <div class="author">{{ preview.author}}</div>
                             {% if preview.avg_rating %}
                                 <div class="stars">
-                                    {{ preview.avg_rating }}
                                     <div class="star-filled">★</div>
+                                    {{ preview.avg_rating }}
+                                    ({{ preview.rating_count }})
                                 </div>
                             {% endif %}
                         </div>
