--- a/recipe_app/recipes/static/recipes/css/styles.css
+++ b/recipe_app/recipes/static/recipes/css/styles.css
@@ -289,7 +289,7 @@ main {
 .recipe-title {
     font-size: 1.6rem;
     font-weight: 500;
-    min-width: 100%;
+    width: 100%;
     text-align: center;
     margin-top: 0.5rem;
 }
@@ -659,4 +659,15 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.recipe-user-panel {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    gap: 1rem;
+}
+
+.panel-icon {
+    color: var(--icon-color);
 }
