--- a/recipe_app/recipe_app/templates/recipe_app/layout.html
+++ b/recipe_app/recipe_app/templates/recipe_app/layout.html
@@ -18,6 +18,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'recipe_app/css/styles.css' %}">
+    {% block extra_css %}{% endblock %}
     
     <title>ChatRCP</title>
 </head>
@@ -29,12 +30,21 @@
                 ChatRCP
             </a>
             <div>
-                <a href="{% url 'recipes:login' %}">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'chefs:logout' %}">
+                        <button id="login-button" class="btn login-btn">
+                            Logout
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" x2="9" y1="12" y2="12"/></svg>
+                        </button>
+                    </a>
+                {% else %}
+                <a href="{% url 'chefs:login' %}">
                     <button id="login-button" class="btn login-btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
-                        Login
+                        Login   
                     </button>
                 </a>
+                {% endif %}
             </div>
         </nav>
     </header>
