--- a/recipe_app/recipes/templates/recipes/list.html
+++ b/recipe_app/recipes/templates/recipes/list.html
@@ -21,7 +21,7 @@
         
         <a href="{% url 'recipes:detail' pk=preview.id %}" class="preview-card-form">
             <button>
-                <div class="card">
+                <div class="card card-clickable">
                     <div class="card-recipe-container">
                         {% comment %} <div class="recipe-image-container">
                             {% if preview.image %}
