--- a/recipe_app/recipes/templates/recipes/previews.html
+++ b/recipe_app/recipes/templates/recipes/previews.html
@@ -32,7 +32,7 @@
                 <input type="hidden" name="{{ key }}" value="{{ value }}">
             {% endfor %}
             <button type="submit">
-                <div class="widget card">
+                <div class="widget card card-clickable">
                     <div class="card-recipe-container">
                         <div class="recipe-properties-container">
                             <div class="recipe-difficulty recipe-difficulty-{{ preview.difficulty }}">
