--- a/recipe_app/chefs/static/registration/css/styles.css
+++ b/recipe_app/chefs/static/registration/css/styles.css
@@ -4,7 +4,10 @@
     justify-content: space-between;
     align-items: left;
     padding: 0.5rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    width: 100%;
+    gap: 0.2rem;
+    color: black;
 }
 
 .error-message {
@@ -13,4 +16,41 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
+}
+
+.warning-text {
+    color: indianred;
+}
+
+input {
+    padding: 0.4rem 0.4rem;
+    width: 100%;
+    border-radius: 6px;
+    text-align: left;
+    font-size: 1rem;
+    color: var(--text-color-2);
+    background-color: whitesmoke;
+    border: 1px solid var(--icon-color);
+    background-color: var(--element-color);
+}
+
+form {
+    width: 100%;
+    display: block;
+}
+
+.form-header {
+    font-weight: 500;
+    font-size: 1.2rem;
+    color: var(--text-color-2);
+    margin-top: 0.5rem;
+}
+
+.submit-button {
+    background-color: var(--accent-color);
+    color: white;
+    border-radius: 6px;
+    padding: 0.4rem;
+    font-weight: 500;
+    margin-top: 1rem;
 }
