--- a/recipe_app/chefs/templates/registration/logout.html
+++ b/recipe_app/chefs/templates/registration/logout.html
@@ -2,20 +2,26 @@
 
 {% load static %}
 
-{% block header-middle %}
-    LOGOUT PAGE
-{% endblock header-middle %}
-
-
 {% block main-content %}
 
-<div class="flex min-h-screen items-center justify-center">
-    <div class="w-full max-w-md p-8 bg-white rounded-lg shadow-md text-center">
-        <h2 class="mb-6 text-2xl font-bold">Logged Out</h2>
-        <p class="mb-6">You have been successfully logged out.</p>
-        <a href="{% url 'login' %}" class="inline-block px-4 py-2 text-white bg-blue-600 rounded hover:bg-blue-700">
-            Log in again
-        </a>
+<div class="row-wrapper section-row card" style="margin-top: 0;">
+    <div class="row-content" style="margin-top: 1rem; margin-bottom: 1rem;">
+        <div class="form-header">
+            LOGOUT
+        </div>
+    </div>
+    <div class="row-content" style="margin-top: 1rem; margin-bottom: 1rem;">
+        <div>
+            Du hast dich erfolgreich ausgeloggt!
+        </div>
+    </div>
+    <div class="row-content" style="margin-top: 0.5rem; margin-bottom: 1.5rem; display: flex; flex-direction: column; gap: 1rem; align-items: center;">
+        <div>
+            <a href="{% url 'chefs:login' %}" style="text-decoration: underline">Erneut einloggen</a>
+        </div>
+        <div>
+            <a href="{% url 'chefs:signup' %}" style="text-decoration: underline">Neu anmelden</a>
+        </div>
     </div>
 </div>
 
