added bookmark functionality

--- a/recipe_app/chefs/templates/registration/logout.html
+++ b/recipe_app/chefs/templates/registration/logout.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block extra_css%}
+    <link rel="stylesheet" href="{% static 'registration/css/styles.css' %}">
+{% endblock extra_css%}
+
 {% block main-content %}
 
 <div class="row-wrapper section-row card" style="margin-top: 0;">
